Build out basic html structure

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,18 @@
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
     </header>
     <section id="sectioncontainer">
+      <section id="map">
+
+      </section>
+      <article id="contactUs">
+
+      </article>
+      <article id="reservations">
+
+      </article>
+      <article id="contactForm">
+
+      </article>
 
     </section>
     <footer id="footercontainer">
