Add image to contact form

--- a/contact.html
+++ b/contact.html
@@ -53,13 +53,9 @@
               <p><input class="" type="text" placeholder="Scary Message \ Special requirements" required name="Message"></p>
               <p><button class="button buttonappearance formbutton" type="submit">SEND MESSAGE</button></p>
           </form>
-
-
-
-
-
-
-
+          <figure>
+                <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"></img>
+          </figure>
       </article>
     </section>
     <footer id="footercontainer">
