--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <nav>
         <h2>Page Navigation</h2>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Menu</a></li>
-          <li><a href="#">Reservations</a></li>
-          <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="reservations.html">Reservations</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
