Main build out of menu articles

--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,41 @@
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
     </header>
     <section id="sectioncontainer">
-      <h2>WHAT'S HAPPENING</h2>
+        <h1>Our Menu</h1>
+        <!-- Beverages -->
+        <article>
+        <h2>Boozie Beverages</h2>
+        <p>Stuff in here that sounds tasty!!!</p>
+        </article>
+        <!-- Appetizers -->
+        <article>
+        <h2>Perilous Appetizers</h2>
+        <p>Stuff in here that sounds tasty!!!</p>
+        </article>
+        <!-- Entrees -->
+        <article>
+        <h2>Eerie Entrees</h2>
+        <p>Stuff in here that sounds tasty!!!</p>
+        </article>
+        <!-- Desserts -->
+        <article>
+        <h2>Haunted Desserts</h2>
+        <p>Stuff in here that sounds tasty!!!</p>
+        </article>
+        <footer id="footercontainer">
+          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+          <img src="img/eyeballchopsticks.svg" alt="" title="">
+          <div id="address">
+            <p>123 Scary St.</p>
+            <p>Monsterville, CA 12346</p>
+            <p>999-867-5309</p>
+            <h2>Come eat scary with us!</h2>
+          </div>
+          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
+          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+        </footer>
+        </div>
+        <script src="js/main.js"></script>
 
     <script src="js/main.js"></script>
 </body>
