--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="menu.html">Menu</a></li>
-            <li><a href="reservations.html">Reservations</a></li>
+            <li><a href="about.html">About Us</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -59,6 +59,7 @@
           <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
           <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
         </footer>
+
         </div>
 
     <script src="js/main.js"></script>
