--- a/menu.html
+++ b/menu.html
@@ -30,17 +30,44 @@
         <!-- Beverages -->
         <article>
         <h2>Boozie Beverages</h2>
-        <p>Stuff in here that sounds tasty!!!</p>
+        <h3>Sake</h3>
+        <p>Not traditional in Japan (you don’t drink sake with rice) but it’s a brilliant combo, as is fino sherry. Chilled rather than warm.</p>
+        <p>&dollar;5</p>
+        <h3>Oaked Portuguese White</h3>
+        <p>It works especially with the more full-on flavours of modern sushi (especially if it involves sesame). See <a href="https://www.matchingfoodandwine.com/news/match_of_the_week/sushi-and-an-oaked-luis-pato-white/">this post</a> about a meal I had in Foz.</p>
+        <p>&dollar;6</p>
+        <h3>Japanese Beer</h3>
+        <p>Absolutely the most flavourful and it feels right. A big sweet hoppy craft beer would be too overpowering.</p>
+        <p>&dollar;4</p>
         </article>
         <!-- Appetizers -->
         <article>
         <h2>Perilous Appetizers</h2>
-        <p>Stuff in here that sounds tasty!!!</p>
+        <h3>Swill Squid Soup</h3>
+        <p>Tofu, green onions, Shiitake mushrooms, bok choy and shrimp simmered in a spicy miso broth.</p>
+        <p>&dollar;4.5</p>
+        <h3>Live Caterpillar Salad</h3>
+        <p>Traditional seaweed salad; seaweed with vinegar, soy sauce, sesame oil, ginger and garlic, topped with sesame seeds.</p>
+        <p>&dollar;3</p>
+        <h3>Green Monster Tail Salad</h3>
+        <p>Lightly fried monster tail tossed with mixed greens, cucumber, onion and tomato in seasoned soy vinaigrette; topped with cashews, fried ramen noodles and sesame seeds.</p>
+        <p>&dollar;5</p>
         </article>
         <!-- Entrees -->
         <article>
         <h2>Eerie Entrees</h2>
-        <p>Stuff in here that sounds tasty!!!</p>
+        <h3>Dinner Sushi and Nigiri Assortment</h3>
+        <p>California Roll with one piece each of: tuna, salmon, yellowtail, whitefish, shrimp and tamago; served with miso soup.</p>
+        <p>&dollar;8</p>
+        <h3>Tentacle Bowl</h3>
+        <p>Tuna, salmon, yellowtail, shrimp, avocado and cucumber over rice, mixed with pokie sauce and served with miso soup.</p>
+        <p>&dollar;8.5</p>
+        <h3>Appendage Tempura Roll</h3>
+        <p>Shrimp tempura with spicy crab mix and cucumber, rolled and topped with seared tuna and avocado.</p>
+        <p>&dollar;9</p>
+        <h3>Lobster Slime Roll</h3>
+        <p>Lobster crab mix, avocado and cucumber rolled and topped with thinly sliced mango; served with mango tobiko and kiwi wasabi sauce.</p>
+        <p>&dollar;10</p>
         </article>
         <!-- Desserts -->
         <article>
