Add dessert section to menu

--- a/menu.html
+++ b/menu.html
@@ -11,83 +11,91 @@
 </head>
 <body>
     <div id="sitecontainer">
-    <header class="parallax">
-      <h1>Harryhausen's Sushi Restaurant</h1>
-      <img src="img/hhlogo.svg" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
-      <nav>
-        <h2>Page Navigation</h2>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="menu.html">Menu</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-      <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
-    </header>
-    <section id="sectioncontainer">
-        <h1>Our Menu</h1>
-        <!-- Beverages -->
-        <article>
-        <h2>Boozie Beverages</h2>
-        <h3>Sake</h3>
-        <p>Not traditional in Japan (you don’t drink sake with rice) but it’s a brilliant combo, as is fino sherry. Chilled rather than warm.</p>
-        <p>&dollar;5</p>
-        <h3>Oaked Portuguese White</h3>
-        <p>It works especially with the more full-on flavours of modern sushi (especially if it involves sesame). See <a href="https://www.matchingfoodandwine.com/news/match_of_the_week/sushi-and-an-oaked-luis-pato-white/">this post</a> about a meal I had in Foz.</p>
-        <p>&dollar;6</p>
-        <h3>Japanese Beer</h3>
-        <p>Absolutely the most flavourful and it feels right. A big sweet hoppy craft beer would be too overpowering.</p>
-        <p>&dollar;4</p>
-        </article>
-        <!-- Appetizers -->
-        <article>
-        <h2>Perilous Appetizers</h2>
-        <h3>Swill Squid Soup</h3>
-        <p>Tofu, green onions, Shiitake mushrooms, bok choy and shrimp simmered in a spicy miso broth.</p>
-        <p>&dollar;4.5</p>
-        <h3>Live Caterpillar Salad</h3>
-        <p>Traditional seaweed salad; seaweed with vinegar, soy sauce, sesame oil, ginger and garlic, topped with sesame seeds.</p>
-        <p>&dollar;3</p>
-        <h3>Green Monster Tail Salad</h3>
-        <p>Lightly fried monster tail tossed with mixed greens, cucumber, onion and tomato in seasoned soy vinaigrette; topped with cashews, fried ramen noodles and sesame seeds.</p>
-        <p>&dollar;5</p>
-        </article>
-        <!-- Entrees -->
-        <article>
-        <h2>Eerie Entrees</h2>
-        <h3>Dinner Sushi and Nigiri Assortment</h3>
-        <p>California Roll with one piece each of: tuna, salmon, yellowtail, whitefish, shrimp and tamago; served with miso soup.</p>
-        <p>&dollar;8</p>
-        <h3>Tentacle Bowl</h3>
-        <p>Tuna, salmon, yellowtail, shrimp, avocado and cucumber over rice, mixed with pokie sauce and served with miso soup.</p>
-        <p>&dollar;8.5</p>
-        <h3>Appendage Tempura Roll</h3>
-        <p>Shrimp tempura with spicy crab mix and cucumber, rolled and topped with seared tuna and avocado.</p>
-        <p>&dollar;9</p>
-        <h3>Lobster Slime Roll</h3>
-        <p>Lobster crab mix, avocado and cucumber rolled and topped with thinly sliced mango; served with mango tobiko and kiwi wasabi sauce.</p>
-        <p>&dollar;10</p>
-        </article>
-        <!-- Desserts -->
-        <article>
-        <h2>Haunted Desserts</h2>
-        <p>Stuff in here that sounds tasty!!!</p>
-        </article>
-        <footer id="footercontainer">
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
-          <img src="img/eyeballchopsticks.svg" alt="" title="">
-          <div id="address">
-            <p>123 Scary St.</p>
-            <p>Monsterville, CA 12346</p>
-            <p>999-867-5309</p>
-            <h2>Come eat scary with us!</h2>
-          </div>
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
-        </footer>
-
-        </div>
+        <header class="parallax">
+          <h1>Harryhausen's Sushi Restaurant</h1>
+          <img src="img/hhlogo.svg" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
+          <nav>
+            <h2>Page Navigation</h2>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </nav>
+          <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
+        </header>
+        <section id="sectioncontainer">
+            <h1>Our Menu</h1>
+            <!-- Beverages -->
+            <article>
+            <h2>Boozie Beverages</h2>
+            <h3>Sake</h3>
+            <p>Not traditional in Japan (you don’t drink sake with rice) but it’s a brilliant combo, as is fino sherry. Chilled rather than warm.</p>
+            <p>&dollar;5</p>
+            <h3>Oaked Portuguese White</h3>
+            <p>It works especially with the more full-on flavours of modern sushi (especially if it involves sesame). See <a href="https://www.matchingfoodandwine.com/news/match_of_the_week/sushi-and-an-oaked-luis-pato-white/">this post</a> about a meal I had in Foz.</p>
+            <p>&dollar;6</p>
+            <h3>Japanese Beer</h3>
+            <p>Absolutely the most flavourful and it feels right. A big sweet hoppy craft beer would be too overpowering.</p>
+            <p>&dollar;4</p>
+            </article>
+            <!-- Appetizers -->
+            <article>
+            <h2>Perilous Appetizers</h2>
+            <h3>Swill Squid Soup</h3>
+            <p>Tofu, green onions, Shiitake mushrooms, bok choy and shrimp simmered in a spicy miso broth.</p>
+            <p>&dollar;4.5</p>
+            <h3>Live Caterpillar Salad</h3>
+            <p>Traditional seaweed salad; seaweed with vinegar, soy sauce, sesame oil, ginger and garlic, topped with sesame seeds.</p>
+            <p>&dollar;3</p>
+            <h3>Green Monster Tail Salad</h3>
+            <p>Lightly fried monster tail tossed with mixed greens, cucumber, onion and tomato in seasoned soy vinaigrette; topped with cashews, fried ramen noodles and sesame seeds.</p>
+            <p>&dollar;5</p>
+            </article>
+            <!-- Entrees -->
+            <article>
+            <h2>Eerie Entrees</h2>
+            <h3>Dinner Sushi and Nigiri Assortment</h3>
+            <p>California Roll with one piece each of: tuna, salmon, yellowtail, whitefish, shrimp and tamago; served with miso soup.</p>
+            <p>&dollar;8</p>
+            <h3>Tentacle Bowl</h3>
+            <p>Tuna, salmon, yellowtail, shrimp, avocado and cucumber over rice, mixed with pokie sauce and served with miso soup.</p>
+            <p>&dollar;8.5</p>
+            <h3>Appendage Tempura Roll</h3>
+            <p>Shrimp tempura with spicy crab mix and cucumber, rolled and topped with seared tuna and avocado.</p>
+            <p>&dollar;9</p>
+            <h3>Lobster Slime Roll</h3>
+            <p>Lobster crab mix, avocado and cucumber rolled and topped with thinly sliced mango; served with mango tobiko and kiwi wasabi sauce.</p>
+            <p>&dollar;10</p>
+            </article>
+            <!-- Desserts -->
+            <article>
+            <h2>Drastic Desserts</h2>
+            <h3>Bananna Sushi</h3>
+            <p>This Banana Sushi is a mix of sweet, savory and tropical that you're sure to love. Slices of banana are layered with peanut butter and rolled in coconut flakes for a delicious dessert roll up.</p>
+            <p>&dollar;4</p>
+            <h3>S'mores Roles</h3>
+            <p>hese S'mores pinwheels are mouth-watering. Layers of Rice Krispies are filled with marshmallow and chocolate for a s'more unlike anything you've ever had before. Thank you Mom for the recipe.</p>
+            <p>&dollar;3.5</p>
+            <h3>Key Lime Sushi</h3>
+            <p>This tropical, sweet and tart dessert is one you'll love. Vanilla cake is filled with a creamy lime filling and topped with whipped cream and lime slices.</p>
+            <p>&dollar;3.5</p>
+            </article>
+            <footer id="footercontainer">
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+              <img src="img/eyeballchopsticks.svg" alt="" title="">
+              <div id="address">
+                <p>123 Scary St.</p>
+                <p>Monsterville, CA 12346</p>
+                <p>999-867-5309</p>
+                <h2>Come eat scary with us!</h2>
+              </div>
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+            </footer>
+        </section>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
