Change name of clear fix, change from id to class

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
       </article>
 
 
-    <footer id="footercontainer">
+    <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
       <div id="address">
