--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
           </figure>
       </article>
     </section>
-    <footer id="footercontainer">
+    <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
       <div id="address">
