--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </article>
       <button class="button buttonappearance">Slimy Button</button>
     </section>
-    <footer id="footercontainer">
+    <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
       <div id="address">
