--- a/menu.html
+++ b/menu.html
@@ -82,7 +82,7 @@
                 <p>This tropical, sweet and tart dessert is one you'll love. Vanilla cake is filled with a creamy lime filling and topped with whipped cream and lime slices.</p>
                 <p>&dollar;3.5</p>
             </article>
-            <footer id="footercontainer">
+            <footer class="clearfix" id="footercontainer">
               <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
               <img src="img/eyeballchopsticks.svg" alt="" title="">
               <div id="address">
