--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       </nav>
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
     </header>
-    <section id="sectioncontainer">
+    <section id="sectioncontainer" class="clearfix">
       <h2>About Us</h2>
       <article>
         <h3>OWNER CHEF</h3>
