--- a/about.html
+++ b/about.html
@@ -43,8 +43,7 @@
         <h3>March 2007</h3>
         <p>“Gari,” his third restaurant, opened on the Upper Westside of Manhattan.</p>
       </article>
-
-
+    </section>
     <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
@@ -57,6 +56,7 @@
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
     </footer>
+
     </div>
     <script src="js/main.js"></script>
 </body>
