--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
           </nav>
           <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
         </header>
-        <section id="sectioncontainer">
+        <section id="sectioncontainer" class="clearfix">
             <h1>Our Menu</h1>
             <!-- Beverages -->
             <article>
@@ -82,6 +82,7 @@
                 <p>This tropical, sweet and tart dessert is one you'll love. Vanilla cake is filled with a creamy lime filling and topped with whipped cream and lime slices.</p>
                 <p>&dollar;3.5</p>
             </article>
+        </section>
             <footer class="clearfix" id="footercontainer">
               <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
               <img src="img/eyeballchopsticks.svg" alt="" title="">
@@ -94,7 +95,7 @@
               <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
               <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
             </footer>
-        </section>
+
     </div>
 
     <script src="js/main.js"></script>
