Correct footer spacing

--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
           </nav>
           <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
         </header>
-        <section id="sectioncontainer" class="clearfix">
+        <section id="sectioncontainer">
             <h1>Our Menu</h1>
             <!-- Beverages -->
             <article>
@@ -82,20 +82,19 @@
                 <p>This tropical, sweet and tart dessert is one you'll love. Vanilla cake is filled with a creamy lime filling and topped with whipped cream and lime slices.</p>
                 <p>&dollar;3.5</p>
             </article>
+            <footer class="clearfix" id="footercontainer">
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+              <img src="img/eyeballchopsticks.svg" alt="" title="">
+              <div id="address">
+                <p>123 Scary St.</p>
+                <p>Monsterville, CA 12346</p>
+                <p>999-867-5309</p>
+                <h2>Come eat scary with us!</h2>
+              </div>
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
+              <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
+            </footer>
         </section>
-        <footer class="clearfix" id="footercontainer">
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
-          <img src="img/eyeballchopsticks.svg" alt="" title="">
-          <div id="address">
-            <p>123 Scary St.</p>
-            <p>Monsterville, CA 12346</p>
-            <p>999-867-5309</p>
-            <h2>Come eat scary with us!</h2>
-          </div>
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image">
-          <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
-        </footer>
-
     </div>
 
     <script src="js/main.js"></script>
