Rearrange image in contact block

--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,16 @@
       </section>
       <article id="contactUs">
           <h2>CONTACT</h2>
-          <h4>EAT WITH US</h4>
-          <p>1313 Disneyland Drive</p>
-          <p>Anaheim, CA 92802</p>
-          <h4>CALL US</h4>
-          <p>(123)456-7890</p>
+          <div>
+              <h4>EAT WITH US</h4>
+              <p>1313 Disneyland Drive</p>
+              <p>Anaheim, CA 92802</p>
+              <h4>CALL US</h4>
+              <p>(123)456-7890</p>
+          </div>
+          <figure>
+                <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"/>
+          </figure>
       </article>
       <article id="reservations">
           <h2>RESERVATIONS</h2>
@@ -53,11 +58,8 @@
               <p><input class="" type="text" placeholder="Scary Message \ Special requirements" required name="Message"></p>
               <p><button class="button buttonappearance formbutton" type="submit">SEND MESSAGE</button></p>
           </form>
-          <figure>
-                <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"></img>
-          </figure>
       </article>
-    </section>
+    </div>
     <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
