--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" id="activeNav">Contact</a></li>
         </ul>
       </nav>
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
