--- a/contact.html
+++ b/contact.html
@@ -17,26 +17,31 @@
       <nav>
         <h2>Page Navigation</h2>
         <ul>
-          <li><a href="index.html" id="activeNav">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="about.html">About Us </a></li>
+          <li><a href="contact.html" id="activeNav">Contact</a></li>
         </ul>
       </nav>
       <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
     </header>
-    <section id="sectioncontainer">
+    <section id="sectioncontainer" class="clearfix">
       <section id="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53046.31897214792!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500043270133" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63083.05994638205!2d-117.95316186119592!3d33.80211992371961!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcd7da419065eb%3A0xe2d125969d2d926d!2sMonsters%2C+Inc.+Mike+%26+Sulley+to+the+Rescue*21!5e0!3m2!1sen!2sus!4v1500041590981" width="1300" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
       </section>
-      <article id="contactUs">
+      <article id="contactUs" class="clearfix">
           <h2>CONTACT</h2>
-          <h4>EAT WITH US</h4>
-          <p>1313 Disneyland Drive</p>
-          <p>Anaheim, CA 92802</p>
-          <h4>CALL US</h4>
-          <p>(123)456-7890</p>
+          <div>
+              <h4>EAT WITH US</h4>
+              <p>1313 Disneyland Drive</p>
+              <p>Anaheim, CA 92802</p>
+              <h4>CALL US</h4>
+              <p>(123)456-7890</p>
+          </div>
+          <figure>
+                <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"/>
+          </figure>
       </article>
       <article id="reservations">
           <h2>RESERVATIONS</h2>
@@ -53,11 +58,8 @@
               <p><input class="" type="text" placeholder="Scary Message \ Special requirements" required name="Message"></p>
               <p><button class="button buttonappearance formbutton" type="submit">SEND MESSAGE</button></p>
           </form>
-          <figure>
-                <img src="img/monsterContact.svg" alt="Image of Happy Monster" title="Happy Monster"></img>
-          </figure>
       </article>
-    </section>
+    </div>
     <footer id="footercontainer" class="clearfix">
       <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
       <img src="img/eyeballchopsticks.svg" alt="" title="">
