Add active nav to menu page

--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
             <h2>Page Navigation</h2>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a href="menu.html" id="activeNav">Menu</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
