Change background color & text for menu container

--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
           </nav>
           <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
         </header>
-        <section id="sectioncontainer">
+        <section id="sectioncontainer" class="menuContainer">
             <div class="clearfix">
                 <h1>Our Menu</h1>
                 <!-- Beverages -->
