Add header image in about page

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
+      <img src="img/monster-maki-sunrise.svg" alt="Pretty Image" title="Pretty Image">
     </header>
     <section id="sectioncontainer" class="clearfix">
       <h2>About Us</h2>
