Fix wdith of about content

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </header>
         <section id="sectioncontainer" class="clearfix">
             <h2>About Us</h2>
-            <article>
+            <article class="about-container">
                 <h3>OWNER CHEF</h3>
                 <p>Mashatoshi "Gooey" Sugio</p>
                 <h3>BIOGRAPHY</h3>
