Add new image to contact page for header

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
           <li><a href="contact.html" id="activeNav">Contact</a></li>
         </ul>
       </nav>
-      <img src="img/foodplate1.svg" alt="Pretty Image" title="Pretty Image">
+      <img src="img/monster-phone.svg" alt="Pretty Image" title="Pretty Image">
     </header>
     <section id="sectioncontainer" class="clearfix">
       <section id="map">
