Add JQuery plugin and Tooltipster plugin and CSS plugin

--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat:400,700,800|Nosifer" rel="stylesheet">
+    <!-- ToolTipster Plugin CSS -->
+    <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
 </head>
 <body>
     <div id="sitecontainer">
@@ -98,6 +100,8 @@
             </footer>
         </section>
     </div>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
