Activate Tooltipster in main.js and add class in html

--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
                 <!-- Beverages -->
                 <article>
                     <h2>Boozie Beverages</h2>
-                    <h3>Sake</h3>
+                    <h3 class="tooltip" title="Don't drink and drive!">Sake</h3>
                     <p>Not traditional in Japan (you don’t drink sake with rice) but it’s a brilliant combo, as is fino sherry. Chilled rather than warm.</p>
                     <p>&dollar;5</p>
                     <h3>Oaked Portuguese White</h3>
