--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Megrim|Montserrat:400,700,800|Nosifer" rel="stylesheet">
     <!-- ToolTipster Plugin CSS -->
     <link rel="stylesheet" type="text/css" href="css/tooltipster.bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/tooltipster-sideTip-light.min" />
 </head>
 <body>
     <div id="sitecontainer">
@@ -36,23 +37,23 @@
                     <h3 class="tooltip" title="Don't drink and drive!">Sake</h3>
                     <p>Not traditional in Japan (you don’t drink sake with rice) but it’s a brilliant combo, as is fino sherry. Chilled rather than warm.</p>
                     <p>&dollar;5</p>
-                    <h3>Oaked Portuguese White</h3>
+                    <h3 class="tooltip" title="Don't drink and drive!">Oaked Portuguese White</h3>
                     <p>It works especially with the more full-on flavours of modern sushi (especially if it involves sesame). See <a href="https://www.matchingfoodandwine.com/news/match_of_the_week/sushi-and-an-oaked-luis-pato-white/">this post</a> about a meal I had in Foz.</p>
                     <p>&dollar;6</p>
-                    <h3>Japanese Beer</h3>
+                    <h3 class="tooltip" title="Don't drink and drive!">Japanese Beer</h3>
                     <p>Absolutely the most flavourful and it feels right. A big sweet hoppy craft beer would be too overpowering.</p>
                     <p>&dollar;4</p>
                 </article>
                 <!-- Appetizers -->
                 <article>
                     <h2>Perilous Appetizers</h2>
-                    <h3>Swill Squid Soup</h3>
+                    <h3 class="tooltip" title="This is spicy!">Swill Squid Soup</h3>
                     <p>Tofu, green onions, Shiitake mushrooms, bok choy and shrimp simmered in a spicy miso broth.</p>
                     <p>&dollar;4.5</p>
-                    <h3>Live Caterpillar Salad</h3>
+                    <h3 class="tooltip" title="Beware of angry caterpillars!">Live Caterpillar Salad</h3>
                     <p>Traditional seaweed salad; seaweed with vinegar, soy sauce, sesame oil, ginger and garlic, topped with sesame seeds.</p>
                     <p>&dollar;3</p>
-                    <h3>Green Monster Tail Salad</h3>
+                    <h3 class="tooltip" title="Warning: chance of green tail growth after consumption.">Green Monster Tail Salad</h3>
                     <p>Lightly fried monster tail tossed with mixed greens, cucumber, onion and tomato in seasoned soy vinaigrette; topped with cashews, fried ramen noodles and sesame seeds.</p>
                     <p>&dollar;5</p>
                 </article>
@@ -62,20 +63,20 @@
                     <h3>Dinner Sushi and Nigiri Assortment</h3>
                     <p>California Roll with one piece each of: tuna, salmon, yellowtail, whitefish, shrimp and tamago; served with miso soup.</p>
                     <p>&dollar;8</p>
-                    <h3>Tentacle Bowl</h3>
+                    <h3 class="tooltip" title="Warning: Tentacles are alive!">Tentacle Bowl</h3>
                     <p>Tuna, salmon, yellowtail, shrimp, avocado and cucumber over rice, mixed with pokie sauce and served with miso soup.</p>
                     <p>&dollar;8.5</p>
                     <h3>Appendage Tempura Roll</h3>
                     <p>Shrimp tempura with spicy crab mix and cucumber, rolled and topped with seared tuna and avocado.</p>
                     <p>&dollar;9</p>
-                    <h3>Lobster Slime Roll</h3>
+                    <h3 class="tooltip" title="Lobster roll slimy!">Lobster Slime Roll</h3>
                     <p>Lobster crab mix, avocado and cucumber rolled and topped with thinly sliced mango; served with mango tobiko and kiwi wasabi sauce.</p>
                     <p>&dollar;10</p>
                 </article>
                 <!-- Desserts -->
                 <article>
                     <h2>Drastic Desserts</h2>
-                    <h3>Bananna Sushi</h3>
+                    <h3 class="tooltip" title="Must wear bananna suit while consuming this.">Bananna Sushi</h3>
                     <p>This Banana Sushi is a mix of sweet, savory and tropical that you're sure to love. Slices of banana are layered with peanut butter and rolled in coconut flakes for a delicious dessert roll up.</p>
                     <p>&dollar;4</p>
                     <h3>S'mores Roles</h3>
