Add JQuery to about & install Backstretch plugin

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
         <section id="sectioncontainer" class="clearfix">
             <h2>About Us</h2>
             <article class="about-container">
+                <div class="backstretch-image"></div>
                 <h3>OWNER CHEF</h3>
                 <p>Mashatoshi "Gooey" Sugio</p>
                 <h3>BIOGRAPHY</h3>
@@ -57,6 +58,8 @@
             <img src="img/eyeballchopsticks.svg" alt="Pretty Image" title="Pretty Image" class="wiggler">
         </footer>
     </div>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
