Replace .min backstretch with regular js file to test

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <section id="sectioncontainer" class="clearfix">
             <h2>About Us</h2>
             <article class="about-container">
-                <div class="backstretch-image"></div>
+                <main id="backstretch-image"></main>
                 <h3>OWNER CHEF</h3>
                 <p>Mashatoshi "Gooey" Sugio</p>
                 <h3>BIOGRAPHY</h3>
@@ -59,7 +59,7 @@
         </footer>
     </div>
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="js/jquery.backstretch.min.js"></script>
+    <script type="text/javascript" src="js/jquery.backstretch.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
