Add JavaScript document.images mouseover listener event

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
                     <li><a href="contact.html" id="activeNav">Contact</a></li>
                 </ul>
             </nav>
-            <img src="img/monster-phone.svg" alt="Pretty Image" title="Pretty Image">
+            <img src="img/monster-phone.svg" alt="Contact Harryhausen's" title="Contact harryhausen's">
+            <img class="hide" src="img/monster-phone-rev01.svg" alt="Contact Harryhausen's" title="Contact harryhausen's">
         </header>
         <section id="sectioncontainer" class="clearfix">
             <section id="map">
