Add class to logo image to restrict width

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div id="sitecontainer">
         <header class="parallax">
             <h1>Harryhausen's Sushi Restaurant</h1>
-            <img src="img/hhlogo.svg" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
+            <img src="img/hhlogo.svg" class="hhlogo" alt="Harryhausen's Restaurant Logo" title="Harryhausen's Restaurant Logo">
             <nav>
                 <h2>Page Navigation</h2>
                 <ul>
